# batch-copy

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: integration-tests.yml  tests.yml
batch-copy/: Cargo.toml  README.md
batch-copy-derive/: Cargo.toml  README.md
batch-copy-derive/src/: lib.rs
batch-copy/examples/: basic.rs  configuration.rs  load_csv.rs  multi_producer.rs  spotprices.csv
batch-copy/src/: actor.rs  errors.rs  handler.rs  lib.rs
batch-copy/tests/: integration.rs
db/: docker-compose.yml  init-db.sh  pg_hba.conf  postgresql.conf
examples/: README.md  basic.rs  configuration.rs  load_csv.rs  multi_producer.rs
src/: actor.rs  handler.rs  lib.rs
tests/: integration.rs
